# Ontario-Job-Bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: weekly-monitor.yml
data/: orgs.csv  orgs_enriched.csv
reports/: title_rejections_2026-02-16.csv  title_rejections_2026-02-21.csv  title_rejections_2026-02-23.csv
src/ontario_job_bot/: __init__.py  classifiers.py  config.py  db.py  discovery.py  emailer.py  http_client.py  main.py  models.py  monitor.py  sheets.py  title_normalize_and_validate.py  utils.py
src/ontario_job_bot/adapters/: adp.py  base.py  common.py  generic.py  html_list.py  icims.py  neogov.py  pdf.py  registry.py  taleo.py  utipro.py  workday.py
state/: postings.sqlite
tests/: test_sheets_org_sync.py  test_title_normalize_and_validate.py
